<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MyPageInfo">

    <EditText
        android:id="@+id/activityMyPageInfo_FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:hint="@string/activityMyPageInfo_EditTextFirstName"
        app:layout_constraintEnd_toEndOf="@+id/activityMyPageInfo_SecondName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activityMyPageInfo_SecondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="15"
        android:hint="@string/activityMyPageInfo_EditTextSecondName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMyPageInfo_FirstName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityMyPageInfo_RecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMyPageInfo_SecondName" />

    <Button
        android:id="@+id/activityMyPageInfo_ButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityMyPageInfo_ButtonSave"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>